--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "cookie-session": "^1.4.0",
     "cors": "^2.8.5",
     "ejs": "^3.1.2",
+    "elasticsearch": "^16.7.1",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "mongoose": "^5.9.11",
