--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "elasticsearch": "^16.7.1",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "indicative": "^7.4.4",
     "mongoose": "^5.9.11",
     "node-sass": "^4.14.1",
     "nodemon": "^2.0.3",
