--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
     "passport-twitter": "^1.0.4",
+    "react-hook-form": "^6.8.3",
     "react-stripe-checkout": "^2.6.3",
     "simple-react-validator": "^1.5.0"
   },
