--- a/client/package.json
+++ b/client/package.json
@@ -7,18 +7,22 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
+    "bootstrap": "^4.5.2",
     "cors": "^2.8.5",
+    "formik": "^2.1.5",
     "http-proxy-middleware": "^1.0.3",
     "indicative": "^7.4.4",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
-    "react-redux": "^7.2.0",
+    "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-stripe-checkout": "^2.6.3",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "simple-react-validator": "^1.5.0"
+    "simple-react-validator": "^1.5.0",
+    "yup": "^0.29.3"
   },
   "scripts": {
     "start": "react-scripts start",
