--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
+    "axios-https-proxy-fix": "^0.17.1",
     "bootstrap": "^4.5.2",
     "cors": "^2.8.5",
     "formik": "^2.1.5",
