--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "simple-react-validator": "^1.5.0",
+    "stripe": "^8.107.0",
     "yup": "^0.29.3"
   },
   "scripts": {
