updated User Schema and added more files

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "axios-https-proxy-fix": "^0.17.1",
     "bcrypt": "^4.0.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "concurrently": "^5.2.0",
     "connect-flash": "^0.1.1",
@@ -30,17 +31,23 @@
     "elasticsearch": "^16.7.1",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "html-to-text": "^5.1.1",
     "indicative": "^7.4.4",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.11",
+    "multer": "^1.4.2",
     "node-sass": "^4.14.1",
+    "nodemailer": "^6.4.14",
     "nodemon": "^2.0.3",
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
     "passport-twitter": "^1.0.4",
+    "pug": "^3.0.0",
     "react-hook-form": "^6.8.3",
     "react-stripe-checkout": "^2.6.3",
+    "sharp": "^0.26.2",
     "simple-react-validator": "^1.5.0"
   },
   "devDependencies": {},
