commented out unused and added dependencies

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "cookie-parser": "^1.4.5",
     "cookie-session": "^1.4.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "ejs": "^3.1.2",
     "elasticsearch": "^16.7.1",
     "express": "^4.17.1",
@@ -35,6 +36,7 @@
     "indicative": "^7.4.4",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.11",
+    "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "node-sass": "^4.14.1",
     "nodemailer": "^6.4.14",
