--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "elasticsearch": "^16.7.1",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "formik-persist": "^1.1.0",
     "helmet": "^4.1.1",
     "html-to-text": "^5.1.1",
     "indicative": "^7.4.4",
