--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "react-hook-form": "^6.8.3",
     "react-stripe-checkout": "^2.6.3",
     "sharp": "^0.26.2",
-    "simple-react-validator": "^1.5.0"
+    "simple-react-validator": "^1.5.0",
+    "stripe": "^8.130.0"
   },
   "devDependencies": {},
   "repository": {
