--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^4.5.2",
     "cors": "^2.8.5",
     "formik": "^2.1.5",
+    "formik-persist": "^1.1.0",
     "http-proxy-middleware": "^1.0.3",
     "indicative": "^7.4.4",
     "react": "^16.13.1",
