--- a/package.json
+++ b/package.json
@@ -3,10 +3,6 @@
   "version": "1.0.0",
   "description": "Code for the entire scotch.io tutorial series: Complete Guide to Node Authentication",
   "main": "server.js",
-  "engines": {
-    "node": "14.15.0",
-    "npm": "6.14.8"
-  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
@@ -40,7 +36,6 @@
     "mongoose": "^5.9.11",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
-    "node-sass": "^4.14.1",
     "nodemailer": "^6.4.14",
     "nodemon": "^2.0.3",
     "passport": "^0.4.1",
@@ -50,11 +45,11 @@
     "passport-local": "^1.0.0",
     "passport-twitter": "^1.0.4",
     "pug": "^3.0.0",
+    "sass": "^1.56.2",
     "sharp": "^0.26.2",
     "simple-react-validator": "^1.5.0",
     "stripe": "^8.130.0"
   },
-  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Avensky/Overthrone.git"
