--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "body-parser": "^1.19.0",
     "concurrently": "^5.2.0",
     "connect-flash": "^0.1.1",
+    "connect-mongo": "^4.6.0",
     "cookie-parser": "^1.4.5",
     "cookie-session": "^1.4.0",
     "cors": "^2.8.5",
@@ -33,7 +34,7 @@
     "html-to-text": "^5.1.1",
     "indicative": "^7.4.4",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.11",
+    "mongoose": "^6.8.4",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "nodemailer": "^6.4.14",
