--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,23 +6,123 @@ on:
     branches: [ master ]
   pull_request: 
     branches: [ master ]
-
+     
 jobs: 
-  getCode:
+  backend:
     runs-on: self-hosted
+
     steps:
-    - name: Get Code
+    - name: Checkout to the repository
       uses: actions/checkout@v3
-    - name: Use Node
+
+    - name: Set up NodeJS environment
       uses: actions/setup-node@v3
       with:
-        node-version: 16.18.1
-    - run: |
-        npm ci
+        node-version: 19.2.0
+
+    - name: Cache node modules
+      id: cache-backend
+      uses: actions/cache@v3
+      env:
+        cache-name: cache-node-modules
+      with:
+        path: node_modules
+        key: ${{runner.os}}-backend-${{ env.cache-name }}-${{ hashFiles('package-lock.json')}}
+        restore-keys: |
+          ${{ runner.os }}-backend-${{ env.cache-name }}-
+          ${{ runner.os }}-backend-
+          ${{ runner.os }}-
+
+    - name: Install Dependencies
+      if: steps.cache-backend.outputs.cache-hit != 'true'
+      run: npm ci
+
+    - name: Check linting and formatting
+      run: npm run lint
+
+    - name: Execute test cases
+      run: echo testing...
+
+  client:
+    needs: backend
+    runs-on: self-hosted
+
+    steps:
+    - name: Checkout to the repository
+      uses: actions/checkout@v3
+    
+    - name: Set up NodeJS environment
+      uses: actions/setup-node@v3
+      with:
+        node-version: 19.2.0
+
+    - name: Cache node modules
+      id: cache-client
+      uses: actions/cache@v3
+      env:
+        cache-name: cache-node-modules
+      with:
+        path: client/node_modules
+        key: ${{runner.os}}-client-${{env.cache-name}}-${{ hashFiles('client/package-lock.json')}}
+        restore-keys: |
+          ${{ runner.os }}-client-${{ env.cache-name }}
+          ${{ runner.os }}-client-
+          ${{ runner.os }}-
+
+    - name: Install Dependencies
+      if: steps.cache-client.outputs.cache-hit !='true'
+      run: |
+          cd client
+          npm ci
+
+    - name: Check linting and formatting
+      run: |
         cd client
-        npm ci
+        npm run lint
+
+    - name: Execute test cases
+      run: echo ...running tests 
+
+  build:
+    needs: client
+    runs-on: self-hosted
+    steps:
+    
+    - name: Checkout to the repository
+      uses: actions/checkout@v3
+    
+    - name: Set up NodeJS environment
+      uses: actions/setup-node@v3
+      with:
+        node-version: 19.2.0
+
+    - name: Use cache node modules
+      uses: actions/cache@v3
+      with:
+        path: |
+          node_modules
+          client/node_modules
+        key: |
+          backend-cache-backend-${{ hashFiles('package-lock.json')}}
+          client-cache-client-${{ hashFiles('client/package-lock.json')}}
+
+    - name: Install Dependencies
+      run: |
+          npm ci
+          cd client
+          npm ci
+
+    - name: Create production build
+      run: |
+        cd client
         npm run build
+
+  restartServer:
+    needs: build
+    runs-on: self-hosted
+    steps:
+    - run: |
         pm2 stop Overthrone
-        pm2 start Overthrone
+        pm2 start Overthrone --update-env
         pm2 save
         sudo service nginx restart
