--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "server": "nodemon server.js",
     "client": "npm run start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client",
+    "lint": "eslint --fix ./*.js"
   },
   "author": "",
   "license": "ISC",
@@ -58,5 +59,10 @@
   "bugs": {
     "url": "https://github.com/Avensky/Overthrone/issues"
   },
-  "homepage": "https://github.com/Avensky/Overthrone#readme"
+  "homepage": "https://github.com/Avensky/Overthrone#readme",
+  "devDependencies": {
+    "eslint": "^8.32.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.27.5"
+  }
 }
