--- a/client/package.json
+++ b/client/package.json
@@ -13,8 +13,6 @@
     "axios-https-proxy-fix": "^0.17.1",
     "bootstrap": "^4.5.2",
     "cors": "^2.8.5",
-    "eslint": "^6.8.0",
-    "eslint-plugin-react": "^7.32.1",
     "formik": "^2.1.5",
     "formik-persist": "^1.1.0",
     "http-proxy-middleware": "^1.0.3",
@@ -54,5 +52,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint": "^6.8.0"
   }
 }
