--- a/client/package.json
+++ b/client/package.json
@@ -4,31 +4,23 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.1",
-    "@stripe/react-stripe-js": "^1.2.0",
-    "@stripe/stripe-js": "^1.11.0",
+    "@stripe/stripe-js": "^1.46.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
-    "axios-https-proxy-fix": "^0.17.1",
-    "bootstrap": "^4.5.2",
     "cors": "^2.8.5",
     "formik": "^2.1.5",
-    "formik-persist": "^1.1.0",
     "http-proxy-middleware": "^1.0.3",
-    "indicative": "^7.4.4",
-    "react": "^16.13.1",
+    "prop-types": "^15.8.1",
+    "react": "^18.0.0",
     "react-bootstrap": "^1.3.0",
-    "react-dom": "^16.13.1",
-    "react-intl-tel-input": "^8.0.4",
+    "react-dom": "^18.0.0",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
-    "react-stripe-checkout": "^2.6.3",
+    "react-scripts": "^5.0.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "simple-react-validator": "^1.5.0",
-    "stripe": "^8.107.0",
     "yup": "^0.29.3"
   },
   "scripts": {
@@ -54,6 +46,9 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^6.8.0"
+    "@babel/eslint-parser": "^7.19.1",
+    "@babel/preset-react": "^7.18.6",
+    "eslint": "^8.32.0",
+    "eslint-plugin-react": "^7.32.1"
   }
 }
