--- a/client/package.json
+++ b/client/package.json
@@ -49,6 +49,7 @@
     "@babel/eslint-parser": "^7.19.1",
     "@babel/preset-react": "^7.18.6",
     "eslint": "^8.32.0",
+    "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-react": "^7.32.1"
   }
 }
