--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -4,7 +4,7 @@
         "es2021": true
     },
     "extends": [
-        "airbnb-base",
+        "eslint-config-airbnb-base",
         "eslint:recommended",
         "plugin:react/recommended",
         "plugin:react/jsx-runtime"
