--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -26,6 +26,7 @@
         "default-param-last": 0,
         "no-unused-expressions": ["error", { "allowTernary": true }],
         "linebreak-style": 0,
-        "import/no-unresolved": "off"
+        "import/no-unresolved": "off",
+        "import/extensions": "off",
     }
 }
