--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -27,6 +27,7 @@
         "no-unused-expressions": ["error", { "allowTernary": true }],
         "linebreak-style": 0,
         "import/no-unresolved": "off",
-        "import/extensions": "off"
+        "import/extensions": "off",
+        "arrow-body-style": "off"
     }
 }
